# draft_claim_verifier

./: README.md  app.py  create_test_docs.py  document_processor.py  llm_client.py  pyproject.toml  report_generator.py  requirements.txt
dummy_data/: test_additional.docx  test_claim.docx  test_id.docx
outputs/: analysis_20260224_133015.docx  qa_report_20260224_133057.docx  qa_report_20260224_134418.docx
